welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
	def fn() : Boolean = {
		var rep = false
		if (getDirection() == direction.EST) {
			if (estFaceMur()) {
				gauche()
				if (estFaceMur()) {
					droite();rep = true
				} else { 
					avance();gauche()
				}
			}
		} else if (estFaceMur()) {
				droite()
				if (estFaceMur()) {
					gauche();rep = true
				} else { 
					avance();droite()
				}
			}
			return rep
	}


while (!fn()) { 
	avance()
	
}
}
